# commitscope

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
github_parser/: __init__.py  client.py  fetcher.py  report.py  types.py
static/: index.html
static/css/: animations.css  base.css  comments.css  commit-card.css  files.css  form.css  hero.css  layout.css  main.css  modal.css  responsive.css  states.css  toast.css  variables.css
static/js/: accordion.js  api.js  history.js  main.js  modal.js  render.js  ui.js  utils.js
tests/: __init__.py  test_client.py  test_fetcher.py  test_report.py
