# Единый конфигурационный файл проекта (PEP 517/518/621)
#
# Заменяет: setup.py, setup.cfg, .flake8, mypy.ini, pytest.ini
# Всё в одном месте - проще поддерживать

[project]
name        = "github-commits-parser"
version     = "1.0.0"
description = "Инструмент для получения коммитов, diff и комментариев из GitHub"
requires-python = ">=3.10"

# Основные зависимости (минимальные версии - для безопасности)
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# Дополнительные зависимости для разработки
# Установка: pip install -e ".[dev]"
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

# =============================================================================
# Настройки ruff (линтер + форматтер)
# =============================================================================
[tool.ruff]
line-length    = 100
target-version = "py310"  # Минимальная версия Python для проекта

[tool.ruff.lint]
# E/W - pycodestyle, F - pyflakes, I - isort (сортировка импортов)
select = ["E", "F", "W", "I"]

# =============================================================================
# Настройки mypy (статическая проверка типов)
# =============================================================================
[tool.mypy]
python_version        = "3.10"
strict                = true  # Максимально строгий режим
ignore_missing_imports = true  # Не падать на либы без тайп-стабов

# =============================================================================
# Настройки pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]   # Где искать тесты
addopts   = "-v --tb=short"  # Подробный вывод, короткий трейсбек

# =============================================================================
# Настройки coverage (покрытие кода тестами)
# =============================================================================
[tool.coverage.run]
source = ["github_parser"]  # Измеряем покрытие только для пакета
omit   = ["tests/*"]        # Тесты сами себя не считают

[tool.coverage.report]
show_missing = true  # Показывать номера непокрытых строк
